--- a/virtual-dom/index.html
+++ b/virtual-dom/index.html
@@ -3,7 +3,7 @@
     <title>Virtual Dom</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div id='app'></div>
     <script src='main.js'></script>
   </body>
 </html>
